# aula

./: AUTHORS  README
091010085/: README
091010111/: README
091010111/ratao/: AUTHORS  CMakeLists.txt  Relatorio.txt  ratao.c
091010111/ratao/src/: retira.h
091010135/: README
101150941/: Diff.txt  readme
101150941/Deck/: build.xml
101150941/Deck/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
101151214/: README
101151214/DeckHandlingLibrary/: AUTHORS  CMakeLists.txt  COPYING  README  deckHandling.c  deckHandling.h  mainDeckHandling.c
101151401/: README
101151425/: README.txt
101151425/scm/: AUTHORS.txt  COPYING.html  README.txt
101151425/scm/cardManager/: build.xml
101151428/Baralho/: build.xml
101151428/Baralho/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
101151430/: README
101151431/: README
101151431/JogoCartas/: build.xml
101151431/JogoCartas/.svn/: all-wcprops  entries
101151431/JogoCartas/exemplo/: JogoDeCartas.java
101151431/JogoCartas/nbproject/: build.xml  genfiles.properties  project.properties  project.xml
101151431/Trabalho/: build.xml
101151431/Trabalho/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
101151431/libcartas/: build.xml
101151431/libcartas/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
101151434/: README
101152028/: README
101152028/TrabalhoInstaladores/: AUTHORS.txt  CMakeLists.txt  COPYING.txt  README.txt  baralho.c  baralho.h  main.c
101152162/: README
101152164/: Copying.txt  Entrega Final Trabalho Wagner.rar  README.txt
101152164/Aplicação/: OBS.txt
101152164/Códigos Fonte/APICartasRafhael/: build.xml
101152164/Códigos Fonte/ApiCartasTeste/: build.xml
101152164/Entrega Final Trabalho Wagner - Corrigido/: Authors.txt  Instalação.txt  Readme.txt
101152164/Entrega Final Trabalho Wagner - Corrigido/ApiCartasTestandoXML/: build.xml
101152164/Sistema de Construção/: OBS.txt
111040050/: README
111150189/src/baralho/: AUTHORS  Baralho.java  Carta.java  README  build.xml
111150193/: README
111150423/: README
111150449/: API_baralho.rar
111150558/: README
111150558/Baralho/: AUTHORS  CMakeCache.txt  CMakeLists.txt  COPYING  Doxyfile  Makefile  README  aplicacao  aplicacao.c  aplicacaold.c  cmake_install.cmake  corta.c  corta.h  descarte.c  descarte.h  embaralhar.c  embaralhar.h  retira.c  retira.h
111150558/Baralho-Linguagem-C/: CMakeLists.txt  CMakeLists.txt~  aplicacao.c
111150558/Baralho/html/: annotated.html  classes.html  corta_8c.html  corta_8h.html  corta_8h_source.html  descarte_8c.html  descarte_8h.html  descarte_8h_source.html  embaralhar_8c.html  embaralhar_8h.html  embaralhar_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  index.html  retira_8c.html  retira_8h.html  retira_8h_source.html  structnodo.html
111150558/Baralho/latex/: annotated.tex  corta_8c.tex  corta_8h.tex  descarte_8c.tex  descarte_8h.tex  doxygen.sty  embaralhar_8c.tex  embaralhar_8h.tex  files.tex  refman.tex  retira_8c.tex  retira_8h.tex  structnodo.tex
111150558/Baralho/rtf/: refman.rtf
111150558/Hi-Lo/: AUTHORS  CMakeLists.txt  Manual_de_instruções.txt  Manual_de_instruções.txt~  README  aplicacao.c
111150558/Hi-Lo/rtf/: refman.rtf
111150558/Hi-Lo/src/: embaralhar.h
111151966/: README
111151966/moscao/: CMakeLists.txt  moscao.c
111151967/: README
111151967/adivinha/: CMakeLists.txt  CMakeLists.txt~  Manual_de_instruções.txt  adivinha.c  adivinha.cbp  adivinha.depend  adivinha.layout  embaralhar.c  embaralhar.h  retira.c
111151967/adivinha/Testes/: minunit.h
111151967/adivinha/src/: descarte.h
111151967/baralho/: AUTHORS.txt  CMakeLists.txt  Doxyfile  README.txt  aplicacao.c  baralho.c  baralho.depend  baralho.h  baralho.layout  lincense.txt
111151967/baralho/html/: annotated.html  aplicacao_8c.html  baralho_8c.html  baralho_8h.html  baralho_8h_source.html  (+9 more)
111151968/: README.txt
111151968/Baralho/: AUTHORS.txt  CMakeLists.txt  COPYING.txt  README.txt  baralho.c  baralho.h  main.c
111450026/: README
111450026/Trabalho Baralho/: AUTHORS.txt  COPYING.txt  README  link-github.txt
112440024/: README
2801125/: README
2801127/: README
2813143/: README
2813193/: .README.swp  README
2813209/: README
2813209/Jogo/: AUTHORS  COPYING  README  build.xml
2813259/: README  README2
2813292/: README
2813728/: README
2813728/Bibliocard/: .project
2813780/: README
2814883/: README
2815087/: README
Baralho-Linguagem-C/: .~lock.Manual_de_instruções.odt#  Manual_de_instruções.odt  aplicacao.c  corta.c  corta.h  descarte.c  descarte.h  embaralhar.c  embaralhar.h  minunit.c  retira.c  retira.h
Baralho-Linguagem-C/Testes/: minunit.c
Baralho-Linguagem-C/src/: corta.c  embaralhar.c
Baralho_C#/CardsLibraryImp/: CardsLibraryImp.csproj  card.cs  deck.cs
Baralho_C#/DOCS/: AUTHORS.txt  AUTHORS.txt~  COPYING.txt  README  README~
Baralho_C#/compilarCardsLibrary/: Form1.Designer.cs  Form1.cs  Form1.resx  Form2.Designer.cs  Form2.cs  Program.cs  compilarCardsLibrary.csproj
Baralho_C#/testCards/: UnitTest1.cs  testCards.csproj
Patchs/: commit alteração api cartas Rafhael.txt
baralho_java/: Baralho.java  Carta.java  Naipe.java  README  Valor.java  build.xml  buildTeste.xml
baralho_java/lib/: nblibraries.properties
baralho_java/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
baralho_java/src/: AUTHORS  Baralho.java  Carta.java  Jogar.java  Jogo.java  Naipe.java  README  Valor.java
baralho_php/: README.md
exemploAnt/: README  build.xml
exemploCmake/: CMakeLists.txt  arquivo.c  arquivo.h  main.c  test_main.c
exemploCoberturaTestCocoon/: README  ReadMe_vs.htm  build.bat  build.sh  execute_tutorial.bat  testsuite.bat  testsuite.sh  tutorial.cpp  tutorial.vcproj
exemploDepurador/: breakpoint.c
exemploIzPack/: AUTHORS.txt  build.xml  install.xml
exemploProfiling/: teste1.cpp  teste2.cpp
matricula/: README
(+529 files in other folders)
